# htmx-demo

./: Cargo.toml  docker-compose.yml  justfile  shell.nix
migrations/: 0001_init.sql  0002_note_user_id_index.sql  0003_rename_user_users.sql
src/: main.rs
src/entity/entities/: mod.rs  note.rs  prelude.rs  user.rs  users.rs
src/load/: mod.rs
src/web/: mod.rs  test.rs
src/web/notes/: mod.rs
src/web/snapshots/: htmx_seaorm_demo__web__test__users.snap
src/web/users/: mod.rs
static/: reload.js
