[package]
name = "htmx-seaorm-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive", "env"] }
dotenvy = "0.15.7"
fake = "4.4.0"
maud = { version = "0.27.0", features = ["axum"] }
rand = "0.9.2"
sea-orm = { version = "1.1.14", default-features = false, features = [
    "macros",
    "sqlx-postgres",
    "runtime-tokio",
    "with-chrono",
    "with-uuid",
] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.18.0", features = ["serde"] }
